  [demarant #14871]
* Feature: added @@esms.xml view for assessments to export information
  according to ESMS metadata format
  [tiberich, demarant #14871 EEA]
* Feature: added a @@assessments_latest_versions_links view that retrieves a
  list of all published assessments, only the latest versions
  [tiberich #14871 EEA]

7.0 - (2013-06-17)
------------------
* Change: updated figures.pt for multiple data provenances
  [szabozo0 #9561]
* Bug fix: improvements to layout and formatting of IMS
  [tiberich #14562]
* Bug fix: hide the themes widget from External Data Spec objects edit as had no use and misslead the editors
  [ghicaale refs #14732]

6.9 - (2013-05-27)
------------------
* Bug fix: make frequency_of_updates and its subfields not required;
  override mutator for frequency of updates, fix its validator to
  allow schemata_edit to work properly and ignore this field
  [tiberich #14628]

6.8 - (2013-05-20)
------------------
* Bug fix: fixed ReST merkup under HISTORY.txt
  [ghicaale refs #14554]

6.7 - (2013-05-20)
------------------
* Upgrade Step: upgrade the eea.indicators package from Addons in plone
  control panel
  [tiberich #14341]
* Upgrade Step: go to /aq_parent/portal_factory/manage_portal_factory_types
  and set the ExternalDataSpec as factory type
  [tiberich #14467]
* Upgrade Step:
    * go to http://www.eea.europa.eu/aq_parent/portal_actions/object_buttons/create_version/manage_propertiesForm
    * Change the "Condition (Expression)" to: python: object.restrictedTraverse('@@can_version')()
    * [tiberich #14361]
* Feature: added a new compound field, frequency_of_updates
  [tiberich #14361]
* Upgrade Step: create a new faceted navigation page that lists expired
  indicators (they will have the ExpirationDate set in the past)
  [tiberich #14361]
* Upgrade Step: go to /prefs_install_products_form, install CompoundField
  [tiberich #14361]
* Feature: don't index anymore themes and indicator codes as keywords.
  [ghicaale refs #14383]
