@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+<metadata>
+    <description>EEA Indicators profile upgrade profile for version 7.1</description>
+</metadata>
+
